--- a/Css_basico.html
+++ b/Css_basico.html
@@ -7,190 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Space+Mono:wght@400;700&family=JetBrains+Mono:wght@400;700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-color: #0a4d68;
-            --secondary-color: #088395;
-            --accent-color: #05bfdb;
-            --success-color: #00c896;
-            --warning-color: #ff6b35;
-            --dark-color: #001524;
-            --border-color: #dbe4ee;
-        }
-        * { font-family: 'Space Mono', monospace; }
-        h1, h2, h3, h4, h5, h6 {
-            font-family: 'Orbitron', sans-serif;
-            font-weight: 900;
-            letter-spacing: 0.05em;
-            text-transform: uppercase;
-        }
-
-        .navbar-neon {
-            background: #0a0e27;
-            border-bottom: 3px solid #00ff88;
-            box-shadow: 0 0 30px rgba(0, 255, 136, 0.7), inset 0 0 20px rgba(0, 255, 136, 0.1);
-            padding: 0.8rem 0;
-            transition: all 0.5s ease;
-            backdrop-filter: blur(10px);
-        }
-        .neon-text {
-            font-family: 'Orbitron', sans-serif;
-            font-weight: 900;
-            font-size: 1.8rem;
-            background: linear-gradient(90deg, #00ff88, #00ccff, #ff00ff, #00ff88);
-            background-size: 200% 100%;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            filter: drop-shadow(0 0 15px #00ff88) drop-shadow(0 0 25px #00ccff);
-            animation: gradient-shift 4s ease infinite;
-            letter-spacing: 0.1em;
-            text-decoration: none;
-        }
-        @keyframes gradient-shift {
-            0%, 100% { background-position: 0% center; }
-            50% { background-position: 100% center; }
-        }
-        .nav-link-neon {
-            font-weight: 700;
-            position: relative;
-            transition: all 0.3s ease;
-            margin: 0 10px;
-            animation: rainbow-neon 4s ease-in-out infinite;
-            font-size: 1rem;
-        }
-        .nav-link-neon:hover {
-            color: #00ccff !important;
-            text-shadow: 0 0 15px #00ccff, 0 0 30px #00ff88;
-            transform: scale(1.08);
-        }
-        @keyframes rainbow-neon {
-            0% { color: #FF0080 !important; text-shadow: 0 0 10px #FF0080, 0 0 20px #FF1493; }
-            25% { color: #FF6B00 !important; text-shadow: 0 0 10px #FF6B00, 0 0 20px #FF8C00; }
-            50% { color: #00FF88 !important; text-shadow: 0 0 10px #00FF88, 0 0 20px #00FF00; }
-            75% { color: #00CCFF !important; text-shadow: 0 0 10px #00CCFF, 0 0 20px #00BFFF; }
-            100% { color: #FF00FF !important; text-shadow: 0 0 10px #FF00FF, 0 0 20px #FF1493; }
-        }
-        .theme-btn {
-            background: rgba(0, 255, 136, 0.2) !important;
-            border: 2px solid #00ff88 !important;
-            color: #00ff88 !important;
-            border-radius: 50%;
-            width: 50px;
-            height: 50px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        body {
-            background: linear-gradient(135deg, #f5f7fa 0%, #e8eef3 100%);
-            font-family: 'Inter', sans-serif;
-        }
-        .hero {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
-            padding: 3.2rem 2rem;
-            border-radius: 0 0 20px 20px;
-            margin-bottom: 2rem;
-        }
-        .section-title {
-            color: var(--primary-color);
-            border-bottom: 4px solid var(--accent-color);
-            padding-bottom: 0.5rem;
-            margin: 2.2rem 0 1.3rem 0;
-            font-weight: 700;
-        }
-        .card-custom {
-            border: none;
-            border-radius: 15px;
-            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-            margin-bottom: 1.5rem;
-            overflow: hidden;
-            background: white;
-        }
-        .card-custom:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 12px 30px rgba(0,0,0,0.15);
-        }
-        .card-header-custom {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
-            padding: 1.1rem 1.4rem;
-            font-size: 1.2rem;
-            font-weight: 700;
-        }
-        .card-body { padding: 1.4rem; }
-        .code-block {
-            background: #1e1e1e;
-            color: #61dafb;
-            padding: 1rem;
-            border-radius: 10px;
-            font-family: 'JetBrains Mono', monospace;
-            overflow-x: auto;
-            margin: 0.8rem 0;
-        }
-        .alert-custom {
-            border-left: 4px solid;
-            border-radius: 8px;
-            padding: 1rem;
-        }
-        .alert-info-custom {
-            background: #e3f2fd;
-            border-left-color: #2196F3;
-        }
-        .accordion-item {
-            border: 1px solid var(--border-color);
-            border-radius: 8px;
-            overflow: hidden;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-            margin-bottom: 1rem;
-            background: white;
-        }
-        .accordion-header {
-            width: 100%;
-            padding: 1rem 1.2rem;
-            background: linear-gradient(135deg, #0a4d68 0%, #088395 100%);
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 0.98rem;
-            font-weight: 700;
-            text-align: left;
-            transition: all 0.3s ease;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .accordion-header:hover { filter: brightness(1.08); }
-        .accordion-header::after {
-            content: '▼';
-            transition: transform 0.3s ease;
-            font-size: 0.75rem;
-        }
-        .accordion-item.active .accordion-header::after { transform: rotate(180deg); }
-        .accordion-content {
-            display: none;
-            padding: 1.2rem;
-            border-top: 2px solid var(--border-color);
-            animation: slideDown 0.3s ease-out;
-        }
-        .accordion-item.active .accordion-content { display: block; }
-        @keyframes slideDown {
-            from { opacity: 0; transform: translateY(-10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        footer {
-            background: var(--primary-color);
-            color: white;
-            text-align: center;
-            padding: 2rem 0;
-            margin-top: 3rem;
-        }
-    </style>
+        <link rel="stylesheet" href="assets/css/site.css">
 </head>
-<body>
+<body class="css-course-page">
+    <div class="css-lion-intro" aria-hidden="true">
+        <div class="css-lion-char">🦁</div>
+        <div class="css-lion-bubble">arrrrrr CSS rico!</div>
+    </div>
+
     <nav class="navbar-neon navbar navbar-expand-lg sticky-top">
         <div class="container">
             <a class="neon-text" href="index.html"><i class="bi bi-house-door"></i> SOURCE-IT</a>
@@ -208,7 +32,8 @@
                     <li class="nav-item"><a class="nav-link-neon" href="dhcp_dns.html">DHCP/DNS</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="lenguajes_de_marcas.html">Lenguajes</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="Css_basico.html">CSS Básico</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="javascript_universitario.html">JavaScript</a></li>
+                    <li class="nav-item"><a class="nav-link-neon" href="Js_basico.html">JavaScript</a></li>
+                    <li class="nav-item"><a class="nav-link-neon" href="freeplane.html">Freeplane</a></li>
                     <li class="nav-item ms-3"><button id="themeToggle" class="theme-btn btn" title="Cambiar tema"><i class="bi bi-palette-fill"></i></button></li>
                 </ul>
             </div>
@@ -410,6 +235,76 @@ input:invalid { border-color: #ff6b35; }</div>
             </div>
         </div>
 
+        <h2 class="section-title"><i class="bi bi-code-slash"></i> Curso de Programación CSS3 + Emmet</h2>
+        <div class="card-custom">
+            <div class="card-body">
+                <p>Ruta rápida para practicar sintaxis CSS3 con abreviaturas Emmet y generar estructura HTML/CSS más rápido.</p>
+
+                <h3 class="h5 mt-3">1) Sintaxis CSS3 esencial</h3>
+                <div class="code-block">/* Regla básica */
+selector {
+  propiedad: valor;
+}
+
+/* Agrupación y cascada */
+h1, h2, h3 {
+  color: #0a4d68;
+}
+
+/* Variables */
+:root {
+  --brand: #05bfdb;
+}
+.btn { background: var(--brand); }</div>
+
+                <h3 class="h5 mt-3">2) Selectores útiles</h3>
+                <div class="code-block">/* Clase, ID, atributo, descendiente */
+.card {}
+#menu {}
+input[type="email"] {}
+.layout .item {}
+
+/* Estados */
+a:hover {}
+button:focus-visible {}
+li:nth-child(2n) {}</div>
+
+                <h3 class="h5 mt-3">3) Emmet para maquetar rápido</h3>
+                <p>Escribe la abreviatura en VS Code y presiona <code>Tab</code>.</p>
+                <div class="code-block">nav.navbar>ul.nav-list>li.nav-item*5>a{Sección $}
+section.hero>h1{Curso CSS3}+p{Aprende sintaxis y práctica}
+main.container>section.card*3>h2{Tema $}+p{Contenido}
+form.form>input:text+input:email+button.btn{Enviar}
+div.grid>article.card*6>h3{Card $}+p{Texto}</div>
+
+                <h3 class="h5 mt-3">4) Emmet para CSS</h3>
+                <div class="code-block">m10          -> margin: 10px;
+p20          -> padding: 20px;
+bgc#0a4d68   -> background-color: #0a4d68;
+df           -> display: flex;
+jcc          -> justify-content: center;
+aic          -> align-items: center;
+g20          -> gap: 20px;
+bd1#ccc      -> border: 1px solid #ccc;
+bdr12        -> border-radius: 12px;
+fz1.2rem     -> font-size: 1.2rem;</div>
+
+                <h3 class="h5 mt-3">5) Mini práctica guiada</h3>
+                <div class="code-block">/* Objetivo: tarjeta responsive + hover */
+.card-demo {
+  width: min(100%, 320px);
+  padding: 1rem;
+  border: 1px solid #dbe4ee;
+  border-radius: .8rem;
+  transition: transform .25s ease, box-shadow .25s ease;
+}
+.card-demo:hover {
+  transform: translateY(-6px);
+  box-shadow: 0 10px 24px rgba(0,0,0,.16);
+}</div>
+            </div>
+        </div>
+
         <h2 class="section-title"><i class="bi bi-journal-code"></i> 10 Ejercicios Prácticos Guiados</h2>
         <div class="card-custom">
             <div class="card-body">
@@ -574,9 +469,16 @@ input:invalid { border-color: #ff6b35; }</div>
             });
         });
     </script>
+    <script src="assets/js/site-sfx.js"></script>
     <script src="assets/js/site-theme.js"></script>
 </body>
 </html>
+
+
+
+
+
+
 
 
 
