--- a/virtualbox.html
+++ b/virtualbox.html
@@ -10,354 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Google Fonts - Fuentes futuristas -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Space+Mono:wght@400;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-color: #0a4d68;
-            --secondary-color: #088395;
-            --accent-color: #05bfdb;
-        }
-        * {
-            font-family: 'Space Mono', monospace;
-        }
-        h1, h2, h3, h4, h5, h6 {
-            font-family: 'Orbitron', sans-serif;
-            font-weight: 900;
-            letter-spacing: 0.05em;
-            text-transform: uppercase;
-        }
-        /* Estilos del Navbar Neón */
-        .navbar-neon {
-            background: #0a0e27;
-            border-bottom: 3px solid #00ff88;
-            box-shadow: 0 0 30px rgba(0, 255, 136, 0.7), inset 0 0 20px rgba(0, 255, 136, 0.1);
-            padding: 0.8rem 0;
-            transition: all 0.5s ease;
-            backdrop-filter: blur(10px);
-        }
-        .neon-text {
-            font-family: 'Orbitron', sans-serif;
-            font-weight: 900;
-            font-size: 1.8rem;
-            background: linear-gradient(90deg, #00ff88, #00ccff, #ff00ff, #00ff88);
-            background-size: 200% 100%;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            filter: drop-shadow(0 0 15px #00ff88) drop-shadow(0 0 25px #00ccff);
-            animation: wave-text-mega 3s ease-in-out infinite, gradient-shift 4s ease infinite;
-            letter-spacing: 0.1em;
-        }
-        @keyframes gradient-shift {
-            0%, 100% { background-position: 0% center; }
-            50% { background-position: 100% center; }
-        }
-        .nav-link-neon {
-            font-weight: 700;
-            position: relative;
-            overflow: hidden;
-            transition: all 0.3s ease;
-            margin: 0 12px;
-            animation: rainbow-neon 4s ease-in-out infinite;
-            font-size: 1.05rem;
-            letter-spacing: 0.05em;
-        }
-        .nav-link-neon::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(90deg, transparent, #00ff88, transparent);
-            animation: wave-hover 0.5s ease-in-out;
-        }
-        .nav-link-neon:hover {
-            color: #00ccff !important;
-            text-shadow: 0 0 20px #00ccff, 0 0 40px #00ff88, 0 0 60px #ff00ff;
-            transform: scale(1.15) skewX(-5deg);
-        }
-        .nav-link-neon.active {
-            color: #ff00ff !important;
-            text-shadow: 0 0 25px #ff00ff, 0 0 50px #00ff88;
-            border-bottom: 3px solid #ff00ff;
-        }
-        @keyframes wave-text-mega {
-            0%, 100% {
-                filter: drop-shadow(0 0 15px #00ff88) drop-shadow(0 0 25px #00ccff);
-            }
-            50% {
-                filter: drop-shadow(0 0 25px #00ff88) drop-shadow(0 0 40px #ff00ff);
-            }
-        }
-        @keyframes wave-hover {
-            0% {
-                left: -100%;
-            }
-            100% {
-                left: 100%;
-            }
-        }
-        @keyframes rainbow-neon {
-            0% {
-                color: #FF0080 !important;
-                text-shadow: 0 0 10px #FF0080, 0 0 20px #FF1493, 0 0 30px #FF0080;
-            }
-            16% {
-                color: #FF6B00 !important;
-                text-shadow: 0 0 10px #FF6B00, 0 0 20px #FF8C00, 0 0 30px #FF6B00;
-            }
-            32% {
-                color: #FFFF00 !important;
-                text-shadow: 0 0 10px #FFFF00, 0 0 20px #FFD700, 0 0 30px #FFFF00;
-            }
-            48% {
-                color: #00FF88 !important;
-                text-shadow: 0 0 10px #00FF88, 0 0 20px #00FF00, 0 0 30px #00FF88;
-            }
-            64% {
-                color: #00CCFF !important;
-                text-shadow: 0 0 10px #00CCFF, 0 0 20px #00BFFF, 0 0 30px #00CCFF;
-            }
-            80% {
-                color: #0080FF !important;
-                text-shadow: 0 0 10px #0080FF, 0 0 20px #1E90FF, 0 0 30px #0080FF;
-            }
-            100% {
-                color: #FF00FF !important;
-                text-shadow: 0 0 10px #FF00FF, 0 0 20px #FF1493, 0 0 30px #FF00FF;
-            }
-        }
-        /* TEMA 2: Cyberpunk Glitch */
-        .navbar-neon.theme-cyberpunk {
-            background: #0d0221;
-            border-bottom: 2px solid #00d4ff;
-            box-shadow: 0 0 20px rgba(0, 212, 255, 0.5), -3px 3px 0px #ff006e;
-        }
-        .navbar-neon.theme-cyberpunk .nav-link-neon {
-            animation: glitch-text 3s ease-in-out infinite;
-        }
-        @keyframes glitch-text {
-            0% { color: #00d4ff !important; text-shadow: -2px 0 #ff006e, 2px 0 #00d4ff; }
-            25% { color: #ff006e !important; text-shadow: -2px 0 #00d4ff, 2px 0 #ff006e; }
-            50% { color: #00d4ff !important; text-shadow: -2px 0 #ff006e, 2px 0 #00d4ff; }
-            75% { color: #ff006e !important; text-shadow: -2px 0 #00d4ff, 2px 0 #ff006e; }
-            100% { color: #00d4ff !important; text-shadow: -2px 0 #ff006e, 2px 0 #00d4ff; }
-        }
-        /* TEMA 3: Synthwave */
-        .navbar-neon.theme-synthwave {
-            background: linear-gradient(90deg, #241e30 0%, #3d2645 100%);
-            border-bottom: 3px solid #ff006e;
-            box-shadow: 0 0 30px rgba(255, 0, 110, 0.4);
-        }
-        .navbar-neon.theme-synthwave .nav-link-neon {
-            animation: synthwave-pulse 2s ease-in-out infinite;
-        }
-        @keyframes synthwave-pulse {
-            0%, 100% { color: #ffd60a !important; text-shadow: 0 0 10px #ffd60a, 0 0 20px #ff006e; }
-            50% { color: #ff006e !important; text-shadow: 0 0 15px #ff006e, 0 0 30px #ffd60a; }
-        }
-        /* TEMA 4: Holographic */
-        .navbar-neon.theme-holographic {
-            background: rgba(10, 20, 50, 0.9);
-            border-bottom: 2px solid #00ffff;
-            box-shadow: 0 0 30px rgba(0, 255, 255, 0.3), inset 0 0 30px rgba(255, 0, 255, 0.1);
-        }
-        .navbar-neon.theme-holographic .nav-link-neon {
-            animation: holographic-shift 4s ease-in-out infinite;
-        }
-        @keyframes holographic-shift {
-            0% { color: #00ffff !important; text-shadow: 0 0 10px #00ffff, 0 0 20px #ff1493; }
-            25% { color: #ff1493 !important; text-shadow: 0 0 10px #ff1493, 0 0 20px #00ff88; }
-            50% { color: #00ff88 !important; text-shadow: 0 0 10px #00ff88, 0 0 20px #00ffff; }
-            75% { color: #ffff00 !important; text-shadow: 0 0 10px #ffff00, 0 0 20px #ff1493; }
-            100% { color: #00ffff !important; text-shadow: 0 0 10px #00ffff, 0 0 20px #ff1493; }
-        }
-        /* TEMA 5: Neon Plasma */
-        .navbar-neon.theme-plasma {
-            background: #0c0221;
-            border-bottom: 3px solid #ff00ff;
-            box-shadow: 0 0 40px rgba(255, 0, 255, 0.6);
-        }
-        .navbar-neon.theme-plasma .nav-link-neon {
-            animation: plasma-surge 2.5s ease-in-out infinite;
-        }
-        @keyframes plasma-surge {
-            0% { color: #ff00ff !important; text-shadow: 0 0 15px #ff00ff, 0 0 30px #ff0080, 0 0 45px #ff00ff; }
-            33% { color: #00ff00 !important; text-shadow: 0 0 15px #00ff00, 0 0 30px #00ff88, 0 0 45px #00ff00; }
-            66% { color: #00ffff !important; text-shadow: 0 0 15px #00ffff, 0 0 30px #00ccff, 0 0 45px #00ffff; }
-            100% { color: #ff00ff !important; text-shadow: 0 0 15px #ff00ff, 0 0 30px #ff0080, 0 0 45px #ff00ff; }
-        }
-        .theme-btn {
-            background: rgba(0, 255, 136, 0.2) !important;
-            border: 1px solid #00ff88 !important;
-            color: #00ff88 !important;
-            transition: all 0.3s ease;
-            font-size: 1.2rem;
-        }
-        .theme-btn:hover {
-            background: rgba(0, 255, 136, 0.4) !important;
-            text-shadow: 0 0 10px #00ff88;
-        }
-        /* BOTONES PERSONALIZADOS NEON */
-        .btn {
-            border: 2px solid;
-            border-radius: 8px;
-            font-weight: 700;
-            padding: 12px 28px !important;
-            font-size: 1.05rem;
-            transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
-            position: relative;
-            overflow: hidden;
-            letter-spacing: 0.05em;
-            margin: 8px 4px !important;
-            display: inline-block;
-            min-width: 140px;
-        }
-        .btn::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: inherit;
-            transition: left 0.3s ease;
-            z-index: -1;
-        }
-        .btn::after {
-            content: '';
-            position: absolute;
-            inset: 0;
-            background: transparent;
-            filter: drop-shadow(0 0 3px currentColor);
-        }
-        .btn-outline-primary {
-            color: #0080FF;
-            border-color: #0080FF;
-            background: transparent;
-        }
-        .btn-outline-primary:hover {
-            background: #0080FF;
-            color: #000;
-            border-color: #0080FF;
-            box-shadow: 0 0 20px rgba(0, 128, 255, 0.6), 
-                        inset 0 0 15px rgba(0, 128, 255, 0.3),
-                        0 0 40px rgba(0, 200, 255, 0.4);
-            transform: scale(1.08);
-        }
-        /* Temas de botones según el navbar */
-        .navbar-neon.rainbow .btn-outline-primary {
-            color: #00ff88;
-            border-color: #00ff88;
-        }
-        .navbar-neon.rainbow .btn-outline-primary:hover {
-            background: #00ff88;
-            color: #000;
-            border-color: #00ff88;
-            box-shadow: 0 0 20px rgba(0, 255, 136, 0.8), 
-                        inset 0 0 15px rgba(0, 255, 136, 0.5),
-                        0 0 40px rgba(0, 200, 255, 0.5);
-            text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        }
-        .navbar-neon.cyberpunk .btn-outline-primary {
-            color: #00CCFF;
-            border-color: #FF00FF;
-            animation: btn-glitch 2s infinite;
-        }
-        .navbar-neon.cyberpunk .btn-outline-primary:hover {
-            background: #FF00FF;
-            color: #00CCFF;
-            border-color: #00CCFF;
-            box-shadow: 0 0 20px #FF00FF, 0 4px 0 #00CCFF, 
-                        0 -4px 0 #FF00FF, -4px 0 0 #00CCFF, 4px 0 0 #FF00FF;
-        }
-        .navbar-neon.synthwave .btn-outline-primary {
-            color: #FFD60A;
-            border-color: #FF006E;
-        }
-        .navbar-neon.synthwave .btn-outline-primary:hover {
-            background: #FFD60A;
-            color: #000;
-            border-color: #FF006E;
-            box-shadow: 0 0 20px rgba(255, 214, 10, 0.8),
-                        0 0 40px rgba(255, 0, 110, 0.6),
-                        inset 0 0 15px rgba(255, 214, 10, 0.4);
-        }
-        .navbar-neon.holographic .btn-outline-primary {
-            color: #00ff88;
-            border-color: #00CCFF;
-            background: rgba(0, 255, 136, 0.05);
-        }
-        .navbar-neon.holographic .btn-outline-primary:hover {
-            background: linear-gradient(135deg, rgba(0, 255, 136, 0.3), rgba(0, 204, 255, 0.3));
-            color: #00CCFF;
-            border-color: #00CCFF;
-            box-shadow: 0 0 20px rgba(0, 255, 136, 0.6),
-                        inset 0 0 20px rgba(0, 204, 255, 0.4),
-                        0 0 40px rgba(255, 0, 255, 0.3);
-        }
-        .navbar-neon.plasma .btn-outline-primary {
-            color: #FF00FF;
-            border-color: #00FF88;
-        }
-        .navbar-neon.plasma .btn-outline-primary:hover {
-            background: #00FF88;
-            color: #000;
-            border-color: #FF00FF;
-            box-shadow: 0 0 20px rgba(255, 0, 255, 0.8),
-                        0 0 40px rgba(0, 255, 136, 0.6),
-                        inset 0 0 15px rgba(0, 255, 136, 0.5);
-        }
-        @keyframes btn-glitch {
-            0%, 100% { transform: translateX(0); }
-            20% { transform: translateX(-2px); }
-            40% { transform: translateX(2px); }
-            60% { transform: translateX(-2px); }
-            80% { transform: translateX(2px); }
-        }
-        body {
-            background: linear-gradient(135deg, #f5f7fa 0%, #e8eef3 100%);
-        }
-        .hero {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
-            padding: 3rem 2rem;
-            border-radius: 0 0 20px 20px;
-        }
-        .section-title {
-            color: var(--primary-color);
-            border-bottom: 4px solid var(--accent-color);
-            padding-bottom: 0.5rem;
-            margin: 2rem 0;
-        }
-        .step-card {
-            background: white;
-            border-radius: 15px;
-            padding: 1.5rem;
-            margin: 1.5rem 0;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-            border-left: 5px solid var(--accent-color);
-        }
-        .code-block {
-            background: #1e1e1e;
-            color: #61dafb;
-            padding: 1.2rem;
-            border-radius: 10px;
-            font-family: 'JetBrains Mono', monospace;
-            overflow-x: auto;
-        }
-        footer {
-            background: var(--primary-color);
-            color: white;
-            text-align: center;
-            padding: 2rem 0;
-            margin-top: 3rem;
-        }
-        .table-networks th {
-            background-color: var(--primary-color);
-            color: white;
-        }
-    </style>
+        <link rel="stylesheet" href="assets/css/site.css">
 </head>
 <body>
     <!-- Navbar Neón -->
@@ -378,7 +31,8 @@
                     <li class="nav-item"><a class="nav-link-neon" href="dhcp_dns.html">DHCP/DNS</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="lenguajes_de_marcas.html">Lenguajes</a></li>
                     <li class="nav-item"><a class="nav-link-neon" href="Css_basico.html">CSS Básico</a></li>
-                    <li class="nav-item"><a class="nav-link-neon" href="javascript_universitario.html">JavaScript</a></li>
+                    <li class="nav-item"><a class="nav-link-neon" href="Js_basico.html">JavaScript</a></li>
+                    <li class="nav-item"><a class="nav-link-neon" href="freeplane.html">Freeplane</a></li>
                     <li class="nav-item ms-3"><button id="themeToggle" class="theme-btn btn" title="Cambiar tema"><i class="bi bi-palette-fill"></i></button></li>
                 </ul>
             </div>
@@ -701,9 +355,16 @@ Address=192.168.100.2/24
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
     </script>
+    <script src="assets/js/site-sfx.js"></script>
     <script src="assets/js/site-theme.js"></script>
 </body>
 </html>
+
+
+
+
+
+
 
 
 
